# seAppTUI

./: CMakeLists.txt  README.md  app_searcher.cpp  app_searcher.hpp  main.cpp  tui.cpp  tui.hpp
